[package]
name = "bazel_tonic_sample"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic-health = "0.4.1"

[package.metadata.raze]
workspace_path = "//cargo"
genmode = "Remote"
experimental_api = true
# default_gen_buildrs = true

